src/main/java/com/example/typist/model/errors/UserAlreadyExistsException.java
package com.example.typist.model.errors;

public class UserAlreadyExistsException extends RuntimeException{
    public UserAlreadyExistsException(String message){
        super(message);
    }
}
